<resources>
    <string name="app_name">porkat</string>
    <item name="visible" type="id" />
    <item name="masked" type="id" />
    <string name="login_text">Masuk</string>
    <string name="update_text">Ubah</string>
    <string name="register_text">Daftar</string>
    <string name="username_text">Id Pengguna</string>
    <string name="password_text">Katasandi</string>
    <string name="logout_text">Keluar</string>
    <string name="register_reminder">Belum punya akun? %s</string>
    <string name="register_here">Daftar disini</string>
    <string name="home_text">Beranda</string>
    <string name="start_date_text">Tanggal Mulai</string>
    <string name="order_day">Lama Pesan</string>
    <string name="one_week">1 Minggu</string>
    <string name="one_month">1 Bulan</string>
    <string name="transaction_number">Banyak Pengiriman(Per Hari)</string>
    <string name="one_times">1 kali</string>
    <string name="two_times">2 kali</string>
    <string name="three_times">3 kali</string>
    <string name="description_transaction">Deskripsi Pengantaran</string>
    <string name="pick_menu">Pilih Menu</string>
    <string name="choose_place">Pilih Tempat Pengiriman</string>
    <string name="setting_text">Pengaturan</string>
    <string name="empty_string"></string>
    <string name="phone_text">Nomor Telpon</string>
    <string name="address_text">Alamat</string>
    <string name="katering_name">Nama Katering</string>
    <string name="fullname_text">Nama Lengkap</string>
    <string name="rating_text">Rating</string>
    <string name="verification_number">Nomor Verifikasi</string>
    <string name="autentikasi_text">Data Autentikasi</string>
    <string name="private_text">Data Diri</string>
    <string name="next_text">Lanjut</string>
    <string name="order_text">Pesan</string>
    <string name="username_error_text">Id Pengguna minimal 4 karakter</string>
    <string name="password_error_text">Katasandi minimal 6 karakter</string>
    <string name="error_fullname_invalid">Masukkan nama dengan benar</string>
    <string name="error_phone_invalid">Masukkan no hp dengan benar</string>
    <string name="logout_dialog_title">Keluar</string>
    <string name="logout_dialog_detail">Apa anda yakin ingin Keluar?</string>
    <string name="yes_dialog">Ya</string>
    <string name="no_dialog">Tidak</string>
    <string name="exit_text">Tekan kembali lagi untuk keluar</string>
    <string name="edit_profile_text">Ubah Profil</string>
    <string name="change_password_text">Ubah Katasandi</string>
    <string name="old_password_text">Katasandi lama</string>
    <string name="new_password_text">Katasandi baru</string>
    <string name="old_password_invalid">Katasandi lama salah</string>
    <string name="get_location_text">Lokasi didapatkan</string>
    <string name="katering_example">Katering Yogyakarta</string>
    <string name="contact_example">087123456789</string>
    <string name="rating_example">4.4</string>
    <string name="deskripsi_text">Deskripsi</string>
    <string name="menu_text">Menu</string>
    <string name="ulasan_text">Ulasan</string>
    <string name="menu_example">Nasi Goreng Spesial</string>
    <string name="price_example">Rp 12.000,00</string>
    <string name="date_example">19 Februari 2017</string>
    <string name="address_example">Jl. Jogja no 18</string>
    <string name="time_example">--:--</string>
    <string name="review_example">Makanan enak \nTemoat nyaman \ndsb</string>
    <string name="add_review">Tambahkan Ulasan</string>
    <string name="button_add_text">Tambah</string>
    <string name="button_cancel_text">Batal</string>
    <string name="lipsum">Donec rutrum congue leo eget malesuada. Quisque velit nisi, pretium ut lacinia in, elementum id enim. Curabitur non nulla sit amet nisl tempus convallis quis ac lectus</string>
    <string name="my_review">Ulasanku</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="delete_review_dialog_title">Hapus Ulasan?</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_maps">Map</string>
    <string name="deliver_time">Jam Pengantaran :</string>
    <string name="available_menu">Menu yang Tersedia</string>
    <string name="dialog_exit_transaction_title">Keluar</string>
    <string name="dalog_exit_transaction_detail">Apakah anda yakin untuk membatalkan pesanan?</string>
    <string name="note_text">Catatan</string>
    <string name="history_transaction_text">Riwayat Transaksi</string>
    <string name="status_example">Melakukan Pembayaran</string>
    <string name="status_text">Status Transaksi</string>
    <string name="transaction_date_text">Tanggal Transaksi</string>
    <string name="total_text">Total Transaksi</string>
    <string name="note_example">Taruh di Meja</string>
    <string name="chosen_menu">Menu yang dipilih</string>
    <string name="take_photo">Ambil Foto</string>
    <string name="add_photo_detail">Foto katering dapat ditambah nanti</string>
    <string name="add_photo_title">Tambahkan foto katering</string>
    <string name="title_activity_home_katering">HomeKateringActivity</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="action_example">Example action</string>
    <string name="send_food_text">Pengiriman Makanan</string>
    <string name="food_text">Lihat Makanan</string>
    <string name="transaction_text">Daftar Pesanan</string>
    <string name="manage_menu_text">Kelola Menu</string>
    <string name="add_photo_text">Tambahkan Foto</string>
    <string name="pick_from_gallery_text">Pilih lewat penyimpanan</string>
    <string name="cancel_text">Batal</string>
    <string name="take_from_camera">Ambil lewat kamera</string>
    <string name="change_photo_text">Ganti Foto</string>
    <string name="menu_name_text">Nama Menu</string>
    <string name="menu_price_text">Harga Menu</string>
    <string name="manage_menu">Kelola Menu</string>
    <string name="edit_menu_text">Edit Menu</string>
    <string name="btn_edit_text">Ubah</string>
    <string name="btn_delete_text">Hapus</string>
    <string name="add_menu_text">Tambah Menu</string>
    <string name="dialog_delete_menu_title">Hapus Menu</string>
    <string name="dialog_delete_menu_message">Apakah anda yakin menghapus menu %s?</string>
    <string name="dialog_update_menu_title">Ubah Menu</string>
    <string name="dialog_update_menu_message">Apakah anda yakin ingin mengubah menu %s?</string>
    <string name="detail_transaction_text">Detail</string>
    <string name="invoice_text">Nota</string>
    <string name="invoice_detail">Tambahkan bukti pembayaran transaksi katering</string>
    <string name="upload_text">Unggah</string>
    <string name="dialog_upload_invoice_title">Unggah Nota</string>
    <string name="dialog_update_invoice_message">Apakah anda yakin nota pembayaran sudah benar?</string>
    <string name="edit_photo_katering_text">Ubah Foto Katering</string>
    <string name="amount_menu_text">Jumlah : %s</string>
    <string name="send_time_example">58 Menit</string>
    <string name="difference_time_text">%s jam</string>
    <string name="less_than_one_hour">Kurang dari 1 jam</string>
    <string name="late_text">Terlambat</string>
    <string name="dialog_choose_transaction_title">Pilih pesanan</string>
    <string name="dialog_choice_transaction_detail">Pilih pesanan yang ingin dikirim dengan menekan pesanan</string>
    <string name="dialog_ok">OK</string>
    <string name="send_time_text">Waktu Pengantaran</string>
    <string name="btn_done_text">Selesai</string>
    <string name="detail_send_food_text">Detail Pengiriman Makanan</string>
    <string name="done_send_text">sudah diantar</string>
    <string name="dialog_done_send_food_title">Konfirmasi Pengiriman</string>
    <string name="dialog_done_send_food_detail">Apakah makanan ini sudah selesai diantar</string>
    <string name="edit_review">Ubah Ulasan</string>
    <string name="button_edit_text">Ubah</string>
</resources>
