<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_send_food"
            android:icon="@drawable/ic_send_24dp"
            android:title="@string/send_food_text" />
        <item
            android:id="@+id/nav_food"
            android:icon="@drawable/ic_restaurant_24dp"
            android:title="@string/food_text" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_money_24dp"
            android:title="@string/transaction_text" />
        <item
            android:id="@+id/nav_menu"
            android:icon="@drawable/ic_menu_24dp"
            android:title="@string/manage_menu_text" />

        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_24dp"
            android:title="@string/setting_text" />

        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_back_24dp"
            android:title="@string/logout_text" />
    </group>

</menu>
