<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_24dp"
            android:title="@string/home_text" />
        <item
            android:id="@+id/nav_transaction"
            android:icon="@drawable/ic_money_24dp"
            android:title="@string/history_transaction_text" />
        <item
            android:id="@+id/nav_setting"
            android:icon="@drawable/ic_setting_24dp"
            android:title="@string/setting_text" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_back_24dp"
            android:title="@string/logout_text" />
    </group>

</menu>
