<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/start_date"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        android:text="@string/start_date_text"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="parent" />

    <ImageView
        android:id="@+id/ic_username"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:layout_marginTop="@dimen/dimen_30dp"
        android:src="@drawable/ic_date_24dp"
        android:tint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/field_start_date" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/field_start_date"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_4dp"
        android:layout_marginRight="@dimen/dimen_20dp"
        app:layout_constraintLeft_toRightOf="@id/ic_username"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/start_date">

        <EditText
            android:id="@+id/et_start_date"
            style="@style/singleline_edittext"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:focusable="false" />
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/order_day"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/order_day"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_start_date" />

    <Switch
        android:id="@+id/sw_week"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:theme="@style/SwitchStyle"
        app:layout_constraintBottom_toBottomOf="@id/one_week"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/one_week" />

    <TextView
        android:id="@+id/one_week"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/one_week"
        app:layout_constraintLeft_toRightOf="@id/sw_week"
        app:layout_constraintTop_toBottomOf="@id/order_day" />

    <Switch
        android:id="@+id/sw_month"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_100dp"
        android:theme="@style/SwitchStyle"
        app:layout_constraintBottom_toBottomOf="@id/one_month"
        app:layout_constraintLeft_toRightOf="@id/one_week"
        app:layout_constraintTop_toTopOf="@id/one_month" />

    <TextView
        android:id="@+id/one_month"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/one_month"
        app:layout_constraintLeft_toRightOf="@id/sw_month"
        app:layout_constraintTop_toBottomOf="@id/order_day" />

    <View
        android:id="@+id/line_order_day"
        style="@style/margin_left_right_20dp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/line_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_week" />

    <TextView
        android:id="@+id/transaction_number"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_40dp"
        android:text="@string/order_day"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/line_order_day" />

    <Switch
        android:id="@+id/sw_one_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimen_20dp"
        android:theme="@style/SwitchStyle"
        app:layout_constraintBottom_toBottomOf="@id/one_times"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/one_times" />

    <TextView
        android:id="@+id/one_times"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/one_times"
        app:layout_constraintLeft_toRightOf="@id/sw_one_times"
        app:layout_constraintTop_toBottomOf="@id/transaction_number" />

    <Switch
        android:id="@+id/sw_three_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="@dimen/dimen_90dp"
        android:theme="@style/SwitchStyle"
        app:layout_constraintBottom_toBottomOf="@id/one_times"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/one_times" />

    <TextView
        android:id="@+id/three_times"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/three_times"
        app:layout_constraintLeft_toRightOf="@id/sw_three_times"
        app:layout_constraintTop_toBottomOf="@id/transaction_number" />

    <Switch
        android:id="@+id/sw_two_times"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:theme="@style/SwitchStyle"
        app:layout_constraintBottom_toBottomOf="@id/one_times"
        app:layout_constraintLeft_toRightOf="@id/sw_one_times"
        app:layout_constraintRight_toLeftOf="@id/sw_three_times"
        app:layout_constraintTop_toTopOf="@id/one_times" />

    <TextView
        android:id="@+id/two_times"
        style="@style/hint_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/dimen_8dp"
        android:text="@string/two_times"
        app:layout_constraintLeft_toRightOf="@id/sw_two_times"
        app:layout_constraintTop_toBottomOf="@id/transaction_number" />

    <View
        android:id="@+id/line_transaction_number"
        style="@style/margin_left_right_20dp"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="@dimen/dimen_1dp"
        android:layout_marginTop="@dimen/dimen_8dp"
        android:background="@color/line_color"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sw_one_times" />


</android.support.constraint.ConstraintLayout>