<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_status"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/status"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/status_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_status"
            style="@style/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/status_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/status" />

        <ImageView
            android:id="@+id/ic_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_info_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_status"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_status" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_status" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_date"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_status">

        <TextView
            android:id="@+id/date"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/transaction_date_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_date"
            style="@style/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/date_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date" />

        <ImageView
            android:id="@+id/ic_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_date_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_date"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_date" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_date" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_total"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_date">

        <TextView
            android:id="@+id/total"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/total_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_total"
            style="@style/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/price_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/total" />

        <ImageView
            android:id="@+id/ic_total"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_money_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_total"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_total" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_total" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_note"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_total">

        <TextView
            android:id="@+id/note"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/note_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_note"
            style="@style/desc_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/note_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/note" />

        <ImageView
            android:id="@+id/ic_note"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_description_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_note"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_note" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_note" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>