<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_address"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/address"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/address_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_address"
            style="@style/desc_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/katering_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ic_address"
            app:layout_constraintTop_toBottomOf="@id/address" />

        <ImageView
            android:id="@+id/ic_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_map_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_address"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_address" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_address" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_contact"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_address">

        <TextView
            android:id="@+id/contact"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/phone_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_contact"
            style="@style/desc_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/contact_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ic_contact"
            app:layout_constraintTop_toBottomOf="@id/contact" />

        <ImageView
            android:id="@+id/ic_contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_call_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_contact"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_contact" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_contact" />
    </android.support.constraint.ConstraintLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/field_rating"
        android:layout_width="@dimen/dimen_0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen_28dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/field_contact">

        <TextView
            android:id="@+id/rating"
            style="@style/hint_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:text="@string/rating_text"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_rating"
            style="@style/desc_text"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_0dp"
            android:text="@string/rating_example"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toLeftOf="@id/ic_rating"
            app:layout_constraintTop_toBottomOf="@id/rating" />

        <ImageView
            android:id="@+id/ic_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/dimen_20dp"
            android:src="@drawable/ic_star_24dp"
            android:tint="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="@id/tv_rating"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_rating" />

        <View
            style="@style/margin_left_right_20dp"
            android:layout_width="@dimen/dimen_0dp"
            android:layout_height="@dimen/dimen_1dp"
            android:layout_marginTop="@dimen/dimen_4dp"
            android:background="@color/line_color"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_rating" />
    </android.support.constraint.ConstraintLayout>

</android.support.constraint.ConstraintLayout>